# streamlit-fargate-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.repository_name}}/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
{{cookiecutter.repository_name}}/.circleci/: config.yml
{{cookiecutter.repository_name}}/.streamlit/: config.toml
{{cookiecutter.repository_name}}/cdk/: package.json
{{cookiecutter.repository_name}}/cdk/lib/: ecr-stack.ts  fargate-stack.ts
{{cookiecutter.repository_name}}/src/: __init__.py  main.py  streamlit.css
